feature: Resolvers & Mutators
QueryScopeResolver
TableResolver
ColumnResolver
BoolPrimitiveResolver
JoinCondtitionResolver
SelectionMutator
Cleaner